Performed code analysis